name:          roguestar
version:       0.7.1.0
cabal-version: >=1.2
build-type:    Simple
license:       OtherLicense
license-file:  LICENSE
maintainer:    Christopher Lane Hinson <lane@downstairspeople.org>
homepage:      http://roguestar.downstairspeople.org/
synopsis:      Sci-fi roguelike game.
description:   A sci-fi roguelike game.
category:      Game
author:        Christopher Lane Hinson
tested-with:   GHC ==7.0.4

executable roguestar-server
  main-is:        Roguestar/Server/Main.hs
  hs-source-dirs: .
  build-depends:  snap >=0.8,
                  snap-core >=0.8,
                  text >=0.11,
                  containers >=0.3.0.0,
                  base >=4
  ghc-prof-options: -prof -auto-all
  ghc-shared-options: -prof -auto-all
  if impl(ghc >= 7.0)
    ghc-options: -threaded -fno-warn-type-defaults -rtsopts=all
  else
    ghc-options: -threaded -fno-warn-type-defaults

library
  hs-source-dirs: .
  build-depends:  hslogger >=1.1.0,
                  bytestring >=0.9.1.5,
                  parallel >=2.2.0.1,
                  stm >=2.1.1.2,
                  data-memocombinators >=0.4.0,
                  MonadRandom >=0.1.4,
                  MaybeT >=0.1.2,
                  mtl >=1.1.0.2,
                  random >=1.0.0.2,
                  old-time >=1.0.0.3,
                  array >=0.3.0.0,
                  containers >=0.3.0.0,
                  base >=4
  exposed-modules:Roguestar.Lib.Roguestar
  other-modules:  Roguestar.Lib.TravelData,
                  Roguestar.Lib.VisibilityData,
                  Roguestar.Lib.FactionData,
                  Roguestar.Lib.Behavior,
                  Roguestar.Lib.Alignment,
                  Roguestar.Lib.PlaneData,
                  Roguestar.Lib.Grids,
                  Roguestar.Lib.Perception,
                  Roguestar.Lib.PlaneVisibility,
                  Roguestar.Lib.Turns,
                  Roguestar.Lib.Plane,
                  Roguestar.Lib.CreatureData,
                  Roguestar.Lib.Character,
                  Roguestar.Lib.Tool,
                  Roguestar.Lib.Substances,
                  Roguestar.Lib.HierarchicalDatabase,
                  Roguestar.Lib.Behavior.Travel,
                  Roguestar.Lib.ToolData,
                  Roguestar.Lib.CharacterData,
                  Roguestar.Lib.Creature,
                  Roguestar.Lib.Facing,
                  Roguestar.Lib.DBPrivate,
                  Roguestar.Lib.RNG,
                  Roguestar.Lib.Species,
                  Roguestar.Lib.Position,
                  Roguestar.Lib.TerrainData,
                  Roguestar.Lib.Behavior.Combat,
                  Roguestar.Lib.Tests,
                  Roguestar.Lib.DBData,
                  Roguestar.Lib.GridRayCaster,
                  Roguestar.Lib.BeginGame,
                  Roguestar.Lib.SpeciesData,
                  Roguestar.Lib.TimeCoordinate,
                  Roguestar.Lib.DB,
                  Roguestar.Lib.AttributeGeneration,
                  Roguestar.Lib.CreatureAttribute,
                  Roguestar.Lib.Building,
                  Roguestar.Lib.BuildingData,
                  Roguestar.Lib.Town,
                  Roguestar.Lib.Random,
                  Roguestar.Lib.PlayerState,
                  Roguestar.Lib.MakeData,
                  Roguestar.Lib.DBErrorFlag,
                  Roguestar.Lib.Behavior.Construction,
                  Roguestar.Lib.Behavior.Make,
                  Roguestar.Lib.Activate,
                  Roguestar.Lib.Contact,
                  Roguestar.Lib.Behavior.DeviceActivation,
                  Roguestar.Lib.Planet,
                  Roguestar.Lib.PlanetData,
                  Roguestar.Lib.Logging,
                  Roguestar.Lib.CharacterAdvancement,
                  Roguestar.Lib.PersistantData,
                  Roguestar.Lib.PowerUpData
  ghc-prof-options: -prof -auto-all
  ghc-shared-options: -prof -auto-all
  if impl(ghc >= 7.0)
    ghc-options: -threaded -fno-warn-type-defaults -rtsopts=all
  else
    ghc-options: -threaded -fno-warn-type-defaults

