name:          roguestar
version:       0.11.0.0
cabal-version: >= 1.2
build-type:    Simple
license:       OtherLicense
license-file:  LICENSE
maintainer:    Christopher Lane Hinson <lane@downstairspeople.org>
homepage:      http://roguestar.downstairspeople.org/
synopsis:      Sci-fi roguelike game.
description:   A sci-fi roguelike game.
category:      Game
author:        Christopher Lane Hinson
tested-with:   GHC ==7.6.3

executable roguestar-server
  Main-is:        Roguestar/Server/Main.hs
  hs-source-dirs: .
  build-depends:  aeson >= 0.6.0.2,
                  snap >= 0.8,
                  snap-core,
                  snap-server,
                  text >=0.11,
                  MonadCatchIO-transformers >= 0.2,
                  data-lens-template,
                  containers >=0.3.0.0,
                  base >=4.4,
                  system-uuid >= 1.2.7,
                  binary >= 0.5.1,
                  transformers >= 0.3.0.0,
                  cipher-aes,
                  HUnit >= 1.2
  ghc-prof-options: -prof -auto-all
  ghc-shared-options: -prof -auto-all
  if impl(ghc >= 7.0)
    ghc-options: -threaded -rtsopts=all -Wall -fno-warn-type-defaults
  else
    ghc-options: -threaded -fno-warn-type-defaults
  other-modules:  
                  Roguestar.Lib.HTML.Mustache,
                  Roguestar.Lib.Core2.Tests

library
  hs-source-dirs: .
  build-depends:  aeson >= 0.6.0.2,
                  attoparsec >= 0.10.2.0,
                  vector >= 0.9.1,
                  unordered-containers >= 0.2.2.0,
                  hastache >= 0.4.2,
                  hslogger >=1.1.0,
                  bytestring >=0.9.1.5,
                  parallel >=2.2.0.1,
                  stm >=2.1.1.2,
                  data-memocombinators >=0.4.0,
                  MonadRandom >=0.1.4,
                  MaybeT >=0.1.2,
                  mtl >=1.1.0.2,
                  random >=1.0.0.2,
                  old-time >=1.0.0.3,
                  array >=0.3.0.0,
                  containers >=0.3.0.0,
                  base >=4,
                  mwc-random >= 0.12.0.1,
                  streams >= 0.8.2
  other-modules:  
                  Roguestar.Lib.Perception,
                  Roguestar.Lib.PlaneVisibility,
                  Roguestar.Lib.Behavior,
                  Roguestar.Lib.Behavior.Activate,
                  Roguestar.Lib.Behavior.CharacterAdvancement,
                  Roguestar.Lib.Behavior.Combat,
                  Roguestar.Lib.Behavior.Construction,
                  Roguestar.Lib.Behavior.Make,
                  Roguestar.Lib.Behavior.Travel,
                  Roguestar.Lib.Behavior.Turns,
                  Roguestar.Lib.Core.Building,
                  Roguestar.Lib.Core.Monster,
                  Roguestar.Lib.Core.Plane,
                  Roguestar.Lib.Core2.Realization,
                  Roguestar.Lib.Graph.Classes,
                  Roguestar.Lib.Graph.Graph,
                  Roguestar.Lib.Graph.Tests,
                  Roguestar.Lib.Utility.Contact,
                  Roguestar.Lib.Utility.Grids,
                  Roguestar.Lib.Utility.HierarchicalDatabase,
                  Roguestar.Lib.Utility.RayCasting,
                  Roguestar.Lib.Utility.SiteCriteria,
                  Roguestar.Lib.Tool,
                  Roguestar.Lib.RNG,
                  Roguestar.Lib.Position,
                  Roguestar.Lib.World.BeginGame,
                  Roguestar.Lib.World.Planet,
                  Roguestar.Lib.Time,
                  Roguestar.Lib.DB,
                  Roguestar.Lib.Town,
                  Roguestar.Lib.Random,
                  Roguestar.Lib.Logging,
                  Roguestar.Lib.Data.BuildingData,
                  Roguestar.Lib.Data.CharacterData,
                  Roguestar.Lib.Data.FacingData,
                  Roguestar.Lib.Data.FactionData,
                  Roguestar.Lib.Data.LocationData,
                  Roguestar.Lib.Data.MakeData,
                  Roguestar.Lib.Data.MonsterData,
                  Roguestar.Lib.Data.PersistantData,
                  Roguestar.Lib.Data.PlaneData,
                  Roguestar.Lib.Data.PlanetData,
                  Roguestar.Lib.Data.PlayerState,
                  Roguestar.Lib.Data.PowerUpData,
                  Roguestar.Lib.Data.ReferenceTypes,
                  Roguestar.Lib.Data.SpeciesData,
                  Roguestar.Lib.Data.SpeciesTraits,
                  Roguestar.Lib.Data.Substances,
                  Roguestar.Lib.Data.TerrainData,
                  Roguestar.Lib.Data.ToolData,
                  Roguestar.Lib.Data.TravelData,
                  Roguestar.Lib.Data.VisibilityData,
                  Roguestar.Lib.HTML.Mustache,
                  Roguestar.Lib.Core2.Tests,
                  Roguestar.Lib.Core2.Location
  ghc-prof-options: -prof -auto-all
  ghc-shared-options: -prof -auto-all
  if impl(ghc >= 7.0)
    ghc-options: -threaded -rtsopts=all -Wall -fno-warn-type-defaults
  else
    ghc-options: -threaded -fno-warn-type-defaults
  exposed-modules: Roguestar.Lib.UnitTests,
                   Roguestar.Lib.Roguestar

